--- a/Software/NodeMCU_Server/DisplayData/package.json
+++ b/Software/NodeMCU_Server/DisplayData/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "mongodb": "^3.0.2",
+    "nodemailer": "^4.4.2",
     "nodemon": "^1.14.12"
   },
   "devDependencies": {},
